Removed placeins package to better pack figures and text. WIll have to review every figure and make sure its appropriately placed.

--- a/latex/all_usepackages.tex
+++ b/latex/all_usepackages.tex
@@ -15,7 +15,10 @@
   
 \usepackage{float}
 \usepackage[
-    hyperindex=true,		% Make numbers of index links as well
+    colorlinks=false,%
+	pdfborder={0,0,0}, %
+	hidelinks,%
+    %hyperindex=true,		% Make numbers of index links as well
    	backref=page, 		% Provide page listing where refs occur in the bibliography
 	%breaklinks=true,
     %colorlinks,%
@@ -37,7 +40,7 @@
 \usepackage{arydshln}
 \usepackage{multirow}
 \usepackage{multicol}
-\usepackage[section]{placeins}
+%\usepackage[section]{placeins}
 
 \input{macros/macros.tex}
 \input{macros/authnote_macros.tex}
