--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -6,7 +6,7 @@
 
 \title{Multi-GPU Solutions of Geophysical PDEs with Radial Basis Function-generated Finite Differences}
 \author{Evan F. Bollig}
-\college{College of Arts and Science}
+\college{College of Arts and Sciences}
 \department{Department of Scientific Computing} % Delete if no department
 \manuscripttype{Dissertation}                    % [Thesis, Dissertation, Treatise]
 \degree{Doctor of Philosophy}                 
@@ -16,12 +16,15 @@
 %\subject{My Topic}
 %\keywords{keyterm1; keyterm2; keyterm3; ...}
 
-\committeeperson{Gordon Erlebacher}{Professor Directing Thesis}
+\committeeperson{Gordon Erlebacher}{Professor Directing Dissertation}
 \committeeperson{Mark Sussman}{University Representative}
 \committeeperson{Natasha Flyer}{Committee Member}
 \committeeperson{Dennis Slice}{Committee Member}
 \committeeperson{Ming Ye}{Committee Member}
 \committeeperson{Janet Peterson}{Committee Member}
+
+\renewcommand*{\appendixtocname}{Appendices}
+
 
 \begin{document}
 
@@ -57,8 +60,12 @@
 \include{conclusions}
 
 \include{implicit_pde_solutions}
-%
+
 \appendix
+
+%
+
+ 
 \include{rbffd_avoid_pole_singularities}
 \include{rbffd_weights_on_sphere}
 
