finsihed corrections from clearance advisor.

--- a/latex/explicit_pde_solutions.tex
+++ b/latex/explicit_pde_solutions.tex
@@ -180,7 +180,7 @@ Based on Figure~\ref{fig:conv_plot_vortex_nohv}, which shows the convergence wit
 %TODO: Mention that CVT nodes require independent tuning of HV param. 
 %TODO: Its useful but not incredibly convenient at the moment.
 
-\section{Solid body rotation}
+\section{Solid Body Rotation}
 \label{sec:cosine_bell}
 
 The second test case simulates the advection of a cosine bell over the surface of a unit sphere at an angle, $\alpha$, relative to the pole of a standard latitude-longitude grid. The governing PDE is
