--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -11,7 +11,7 @@
 \begin{document}
 \fi
 
-\chapter{GPU SpMV (incomplete)}
+\chapter{GPU SpMV}
 \label{chap:gpu_rbffd}
 
 General Purpose GPU (GPGPU) computing is one of today's hottest trends in scientific computing. As problem sizes grow larger, it behooves us to work on parallel architectures, be it across multiple CPUs or one or more GPUs. With over 1 TFLOP/s peak possible throughput in double precision on a single GPU \cite{KeplerFactSheet}, a compelling argument is made for the latter. 
