--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -45,7 +45,7 @@
 %\input{notation_and_symbols}
 %\include{abbreviations}
 %%
-\input{abstract.tex}
+\input{abstract}
 
 \mainmatter
 
@@ -62,9 +62,6 @@
 \include{implicit_pde_solutions}
 
 \appendix
-
-%
-
  
 \include{rbffd_avoid_pole_singularities}
 \include{rbffd_weights_on_sphere}
@@ -91,3 +88,4 @@
 \input{biography.tex}
 
 \end{document}
+    
